FIND_PACKAGE(SWIG REQUIRED)
FIND_PACKAGE(PythonInterp REQUIRED)

INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES(
	"${PROJECT_BINARY_DIR}/../../"
	"${PROJECT_SOURCE_DIR}/include"
	"${PROJECT_SOURCE_DIR}/../sos/include"
	"${PROJECT_SOURCE_DIR}/../ods/include"
)

SET(CMAKE_SWIG_FLAGS "-I/usr/include")

SWIG_ADD_MODULE(bwx python bwx.i)
SWIG_LINK_LIBRARIES(bwx sos ${PYTHON_LIBRARIES})

SET(PY_SITE_PKGDIR lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages)

SET(BWXPY_IDIR ${PY_SITE_PKGDIR}/${PROJECT_NAME})

SET(BWXPY_FILES __init__.py
		BWX.py
		${CMAKE_CURRENT_BINARY_DIR}/bwx.py
		${CMAKE_CURRENT_BINARY_DIR}/_bwx.so)
INSTALL(FILES ${BWXPY_FILES}
	DESTINATION ${BWXPY_IDIR})
