FIND_PACKAGE(SWIG REQUIRED)

INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES(
	"${PROJECT_BINARY_DIR}/../../"
	"${PROJECT_SOURCE_DIR}/include"
)

# SET(CMAKE_SWIG_FLAGS "-I/usr/include")

# SET_SOURCE_FILES_PROPERTIES(ods.i PROPERTIES CPLUSPLUS ON)
# SET_SOURCE_FILES_PROPERTIES(ods.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(ods python ods.i)
SWIG_LINK_LIBRARIES(ods ods ${PYTHON_LIBRARIES})
